Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3796

Health check fails once (consistently?) during startup

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • None
    • 6.0.0
    • Cop, Manager
    • None

    Description

      I see this consistently on a box:

      Jul 23 14:50:35 cosmo traffic_cop[7554]: (http test) received non-200 status(502)
      Jul 23 14:50:35 cosmo traffic_cop[7554]: server heartbeat failed [1]
      Jul 23 14:50:45 cosmo traffic_cop[7554]: server heartbeat succeeded
      

      I'm guessing this is related to my changes for eliminating WebUI.

      Attachments

        Issue Links

          Activity

            People

              jamespeach James Peach
              zwoop Leif Hedstrom
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: