TS-3796: health check fails once during startup

Make sure that we initialize the socket length so that
accept(2) doesn't spuriously fail.